docs/book/samples/appa/needless_continuation_check.kso
main =
  total = [9 1 8 2 7] . sort
    . sum
  print "sum: {total}"
